tests/format/misc/errors/css/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`less-syntax.css [css] format 1`] = `
"CssSyntaxError: Unknown word (1:4)
> 1 | a {.bordered();}
    |    ^
  2 |
Cause: <css input>:1:4: Unknown word"
`;

exports[`scss-syntax.css [css] format 1`] = `
"CssSyntaxError: Unknown word (1:15)
> 1 | a {content: #{$foo}}
    |               ^
  2 |
Cause: <css input>:1:15: Unknown word"
`;
